Fixed scrollbar effect added

--- a/src/css/_home.scss
+++ b/src/css/_home.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   height: 88vh;
+  margin-bottom: 60px;
 
   .home-content {
     position: relative;
