--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -1,64 +1,88 @@
 /* Navigation bar specific CSS variables */
-$navbar-font-size: 24px;
-$navbar-font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Oxygen",
-"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-sans-serif;
+$navbar-font-size: 21px;
+$navbar-font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+  "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  sans-serif;
 $navbar-font-weight: 300;
 
 /* Navigation bar CSS */
 .navbar {
   border-radius: 30px;
-  box-shadow: 0 0 5px #ccc;
-  display: block;
-  margin: 0 auto;
-  margin-top: 40px;
-  padding: 10px 0;
-  position: relative;
-  width: 100%; max-width: 1700px;
+  box-shadow: 0 1px 5px #ccc;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 5px auto;
+  // display: block;
+  // margin: 0 auto;
+  // margin-top: 10px;
+  // padding: 10px 0;
+  // position: relative;
+  width: 90%;
+  max-width: 1700px;
+  transition: 0.5s;
+
+  .logo {
+    float: left;
+  }
+
+  .nav-links {
+    display: inline-block;
+
+    .nav-text {
+      color: #333333;
+      font-family: $navbar-font-family;
+      font-size: $navbar-font-size;
+      font-weight: $navbar-font-weight;
+
+      li {
+        color: #000;
+        display: inline-block;
+        line-height: 30px;
+        width: 110px;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+
+  .primary-button {
+    display: inline-block;
+    background: #ca1527;
+    color: #fff;
+    font-family: $navbar-font-family;
+    font-size: $navbar-font-size;
+    font-weight: $navbar-font-weight;
+    padding: 5px;
+    text-decoration: none;
+
+    &:hover {
+      background: #000;
+      color: #fff;
+    }
+  }
 }
 
-.nav-links {
-  display: inline-block;
-}
-.nav-links li {
-  color: #000;
-  display: inline-block;
-  line-height: 40px;
-  width: 110px;
-}
-.nav-links li:hover {
-  text-decoration: underline
-}
+// #product-design-button {
+//   display: inline-block;
+//   margin-left: 20px;
+// }
 
-.nav-text {
-  color: #333333;
-  font-family: $navbar-font-family;
-  font-size: $navbar-font-size;
-  font-weight: $navbar-font-weight;
-}
+// .primary-button:hover {
+//   background: #000;
+// }
 
-.logo {
-  float: left;
-  margin-left: 40px;
-}
-
-#product-design-button {
-  display: inline-block;
-  margin-left: 20px;
-}
-
-.primary-button {
-  background: #B13333;
-  color: #fff;
-  font-family: $navbar-font-family;
-  font-size: $navbar-font-size;
-  font-weight: $navbar-font-weight;
-  padding: 10px;
-  text-decoration: none;
-}
-
-.primary-button:hover {
-  background: #000
+/* Activates on the scroll*/
+.scrolled {
+  position: fixed;
+  width: 100%;
+  margin-top: 0;
+  border-radius: 0;
+  box-shadow: 0 2px 5px #333333;
+  z-index: 999;
 }
 
 /* Responsive design changes to adapt to screen size */
