--- a/src/css/_section2.scss
+++ b/src/css/_section2.scss
@@ -1,37 +1,39 @@
-.section-img {
-  margin-left: 50px;
-  float: left;
+.wrap {
+  .section-img {
+    margin-left: 50px;
+    float: left;
 
-  img {
-    height: 400px;
-    width: 400px;
-  }
-}
-
-.section2-content {
-  margin-right: 50px;
-  width: 50%;
-  float: right;
-
-  h1 {
-    margin-left: -20%;
-    margin-bottom: 20px;
-    font-weight: 1000;
-    font-size: 55px;
+    img {
+      height: 400px;
+      width: 400px;
+    }
   }
 
-  p {
-    color: grey;
-    margin-bottom: 10px;
-  }
+  .section2-content {
+    margin-right: 50px;
+    width: 50%;
+    float: right;
 
-  .section2-btn {
-    border-radius: 30px;
+    h1 {
+      margin-left: -20%;
+      margin-bottom: 20px;
+      font-weight: 1000;
+      font-size: 55px;
+    }
 
-    &:hover {
-      background: rgb(255, 84, 84);
+    p {
+      color: grey;
+      margin-bottom: 10px;
+    }
 
-      color: white;
+    .section2-btn {
+      border-radius: 30px;
+
+      &:hover {
+        background: rgb(255, 84, 84);
+
+        color: white;
+      }
     }
   }
 }
